# videodir-rust

./: .gitignore  Cargo.toml  Makefile  htpasswd  localhost.crt  localhost.key  readme.md  videodir.conf
src/: api.rs  app.rs  cli.rs  config.rs  htpasswd.rs  jwt.rs  main.rs
static/: index.html
videoGeovision/cam01/0228/: Event20180228072812001.avi  (+3 more)
videoItv/24-01-18 01/: 0._01  0._02  0._04  0._06  0._15  0._18  0._19  1._01  1._02  1._04  1._06  1._15  1._18  1._19  10._02  10._06  11._02  11._06  12._02  12._06  13._02  13._06  14._06  15._06  16._06  17._06  18._06  19._06  1A._06  2._01  2._02  2._04  2._06  2._18  3._01  3._02  3._04  3._06  3._18  4._01  (+36 more)
videoItv/24-01-18 02/: 0._01  0._02  0._04  0._05  0._06  0._11  0._15  0._18  0._19  0._21  0._24  1._01  1._02  1._04  1._05  1._06  1._18  1._24  10._06  11._06  12._06  2._01  2._02  2._04  2._06  2._18  3._06  3._18  4._06  4._18  5._06  5._18  6._06  7._06  8._06  9._06  A._06  B._06  C._06  D._06  (+2 more)
videoItv/25-01-18 01/: 0._01  0._02  0._03  0._04  0._05  0._06  0._07  0._08  0._09  0._10  0._11  0._13  0._15  0._19  0._21  0._22  0._24  0._25  0._30  1._01  1._02  1._03  1._04  1._05  1._06  1._07  1._08  1._09  1._10  1._11  1._13  1._15  1._19  1._21  1._24  1._30  10._03  10._05  10._09  10._10  (+241 more)
videoItv/25-01-18 02/: 0._01  0._02  0._03  0._04  0._05  0._06  0._07  0._08  0._09  0._10  0._11  0._13  0._15  0._19  0._20  0._21  0._24  0._25  1._01  1._02  1._03  1._04  1._05  1._06  1._07  1._08  1._09  1._10  1._11  1._13  1._15  1._19  1._20  1._21  1._24  1._25  10._03  10._05  10._10  10._19  (+186 more)
