[package]
name = "videodir-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
bindata = "0.1.1"
bindata-impl = "0.1.0"
bcrypt = "0.13.0"
clap = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.9"
# log = "0.4"
# env_logger ="0.9.3"
simple-log = "1.5"
rustls = "0.20.7"
rustls-pemfile = "1"
jsonwebtoken = "8"
chrono = "0.4.22"
